--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 DATABASE_URL=postgresql+psycopg://postgres:password@localhost:5432/postgres
+GEMINI_API_KEY=AIzaSyD8G2me5ps0MPpjijgl9JlArwHSoaVoAhc
+GEMINI_MODEL=gemini-flash-latest
